fix overflow

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     padding: 0;
     background-color: var(--gray);
     font-family: 'Plus Jakarta Sans', sans-serif;
+    height: 100vh;
 }
 
 header {
@@ -31,16 +32,16 @@ section {
     margin-left: auto;
     margin-right: auto;
     background-color: white;
-    height: 100vh;
+    /* height: 100%; */
     display: flex;
     flex-direction: column;
 }
 
 .participant {
-    display: flex;
-    flex: 1;
+    /* display: flex; */
+    /* flex: 1; */
     flex-direction: column;
-    overflow: auto;
+    /* overflow: auto; */
     margin: 12px 0 12px 0;
 }
 
